Fix window resize on mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -472,7 +472,7 @@ strong {
 
 
 
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   body {
     overflow-y: hidden;
   }
